--- a/websites/sindhi-sangat-uk/index.html
+++ b/websites/sindhi-sangat-uk/index.html
@@ -1,401 +1,79 @@
-<!doctype html>
-<html lang="en">
+<html lang="en" class="">
+  <head>
+    <meta charset="UTF-8" />
+    <title>CodePen Demo</title>
+    <meta name="robots" content="noindex" />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="https://static.codepen.io/assets/favicon/favicon-aec34940fbc1a6e787974dcd360f2c6b63348d4b1f4e06c77743096d55480f33.ico"
+    />
+    <link
+      rel="mask-icon"
+      type=""
+      href="https://static.codepen.io/assets/favicon/logo-pin-8f3771b1072e3c38bd662872f6b673a722f4b3ca2421637d5596661b4e2132cc.svg"
+      color="#111"
+    />
+    <link rel="canonical" href="https://codepen.io/prvnbist/pen/GQMPZq" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+    <script src="https://static.codepen.io/assets/editor/iframe/iframeConsoleRunner-dc0d50e60903d6825042d06159a8d5ac69a6c0e9bcef91e3380b17617061ce0f.js"></script>
+    <script src="https://static.codepen.io/assets/editor/iframe/iframeRefreshCSS-d00a5a605474f5a5a14d7b43b6ba5eb7b3449f04226e06eb1b022c613eabc427.js"></script>
+    <script src="https://static.codepen.io/assets/editor/iframe/iframeRuntimeErrors-29f059e28a3c6d3878960591ef98b1e303c1fe1935197dae7797c017a3ca1e82.js"></script>
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <link rel="apple-touch-icon" type="image/png"
-        href="https://static.codepen.io/assets/favicon/apple-touch-icon-5ae1a0698dcc2402e9712f7d01ed509a57814f994c660df9f7a952f3060705ee.png">
-    <meta name="apple-mobile-web-app-title" content="CodePen">
-    <link rel="shortcut icon" type="image/x-icon"
-        href="https://static.codepen.io/assets/favicon/favicon-aec34940fbc1a6e787974dcd360f2c6b63348d4b1f4e06c77743096d55480f33.ico">
-    <link rel="mask-icon" type=""
-        href="https://static.codepen.io/assets/favicon/logo-pin-8f3771b1072e3c38bd662872f6b673a722f4b3ca2421637d5596661b4e2132cc.svg"
-        color="#111">
-    <title>CodePen - Sticky Navigation Menu With Smooth Scrolling</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
-    <style>
-        /*** Mixins & Default Styles ***/
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-        }
-
-        body {
-            overflow-x: hidden;
-            overflow-y: scroll;
-        }
-
-        /*** Color Variables ***/
-        /*** Centering Hack ***/
-        /*** Header Styles ***/
-        header {
-            width: 100vw;
-            height: 100vh;
-            background: #5601f2;
-            display: -webkit-box;
-            display: flex;
-        }
-
-        /*** Navigation Styles ***/
-        nav {
-            width: 100vw;
-            height: 160px;
-            background: #46b2f0;
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            position: fixed;
-            z-index: 10;
-            -webkit-transition: all 0.3s;
-            transition: all 0.3s;
-        }
-
-        nav.navShadow {
-            box-shadow: 0 4px 30px -5px rgba(0, 0, 0, 0.2);
-            height: 100px;
-        }
-
-        nav.navShadow #word-mark {
-            opacity: 0;
-        }
-
-        #brand,
-        #menu,
-        ul {
-            display: -webkit-box;
-            display: flex;
-            -webkit-box-align: center;
-            align-items: center;
-        }
-
-        #brand {
-            padding-left: 40px;
-        }
-
-        #logo {
-            width: 55px;
-            height: 55px;
-            background: #fff;
-            border-radius: 50%;
-            cursor: pointer;
-        }
-
-        #word-mark {
-            width: 120px;
-            height: 20px;
-            background: #fff;
-            border-radius: 90px;
-            margin-left: 20px;
-            opacity: 1;
-            -webkit-transition: all 0.3s;
-            transition: all 0.3s;
-        }
-
-        /*** Menu Styles ***/
-        #menu {
-            -webkit-box-pack: end;
-            justify-content: flex-end;
-            padding-right: 40px;
-        }
-
-        li {
-            margin-left: 20px;
-        }
-
-        li a {
-            width: 80px;
-            height: 20px;
-            background: #fff;
-            display: block;
-            border-radius: 90px;
-        }
-
-        #menu-toggle {
-            width: 55px;
-            height: 55px;
-            background: #2ea8ee;
-            display: -webkit-box;
-            display: flex;
-            -webkit-box-pack: center;
-            justify-content: center;
-            -webkit-box-align: center;
-            align-items: center;
-            border-radius: 50%;
-            cursor: pointer;
-            display: none;
-        }
-
-        #menu-toggle:hover .bar {
-            width: 25px;
-        }
-
-        #menu-toggle.closeMenu .bar {
-            width: 25px;
-        }
-
-        #menu-toggle.closeMenu .bar:first-child {
-            -webkit-transform: translateY(7px) rotate(45deg);
-            transform: translateY(7px) rotate(45deg);
-        }
-
-        #menu-toggle.closeMenu .bar:nth-child(2) {
-            -webkit-transform: scale(0);
-            transform: scale(0);
-        }
-
-        #menu-toggle.closeMenu .bar:last-child {
-            -webkit-transform: translateY(-7px) rotate(-45deg);
-            transform: translateY(-7px) rotate(-45deg);
-        }
-
-        .bar {
-            width: 25px;
-            height: 2px;
-            background: #fff;
-            -webkit-transition: 0.3s ease-in-out;
-            transition: 0.3s ease-in-out;
-        }
-
-        .bar:nth-child(2) {
-            width: 20px;
-            margin: 5px 0;
-        }
-
-        .bar:last-child {
-            width: 15px;
-        }
-
-        /*** Hero Section Styles ***/
-        #hero-section {
-            width: 100vw;
-            height: calc(100vh - 160px);
-            display: -webkit-box;
-            display: flex;
-            -webkit-box-pack: center;
-            justify-content: center;
-            -webkit-box-align: center;
-            align-items: center;
-            margin-top: 160px;
-        }
-
-        #head-line {
-            width: 520px;
-            height: 30px;
-            background: #fff;
-            border-radius: 90px;
-            position: relative;
-        }
-
-        #head-line:before,
-        #head-line:after {
-            content: "";
-            height: 30px;
-            border-radius: 90px;
-        }
-
-        #head-line:before {
-            width: 360px;
-            background: #fff;
-            position: absolute;
-            top: -60px;
-            left: 50%;
-            -webkit-transform: translate(-50%, 0);
-            transform: translate(-50%, 0);
-        }
-
-        #head-line:after {
-            width: 200px;
-            background: #fff;
-            position: absolute;
-            left: 50%;
-            bottom: -60px;
-            -webkit-transform: translate(-50%, 0);
-            transform: translate(-50%, 0);
-        }
-
-        /*** Section Styles ***/
-        section {
-            width: 100vw;
-            height: calc(100vh - 100px);
-            display: -webkit-box;
-            display: flex;
-            -webkit-box-pack: center;
-            justify-content: center;
-        }
-
-        section:nth-child(odd) {
-            background: #fa6c98;
-        }
-
-        section:nth-child(even) {
-            background: #79edfc;
-        }
-
-        #heading {
-            width: 120px;
-            height: 20px;
-            background: #fff;
-            border-radius: 90px;
-            margin-top: 40px;
-        }
-
-        /*** Responsive Menu For Smaller Device ***/
-        @media screen and (max-width: 767px) {
-            #menu-toggle {
-                display: -webkit-box;
-                display: flex;
-            }
-
-            ul {
-                display: inline-block;
-                width: 100vw;
-                height: 0;
-                background: #79edfc;
-                position: absolute;
-                top: 160px;
-                -webkit-transform: translate(, );
-                transform: translate(, );
-                box-shadow: 0 5px 30px -4px rgba(0, 0, 0, 0.2);
-                -webkit-transition: all 0.3s;
-                transition: all 0.3s;
-            }
-
-            ul.showMenu {
-                height: 250px;
-            }
-
-            ul.showMenu li {
-                height: 80px;
-                opacity: 1;
-                visibility: visible;
-            }
-
-            li {
-                width: 50%;
-                height: 80px;
-                float: left;
-                padding-left: 40px;
-                opacity: 0;
-                visibility: hidden;
-                margin-left: 0;
-                -webkit-transition: all 0.3s 0.1s;
-                transition: all 0.3s 0.1s;
-            }
-
-            li:first-child,
-            li:nth-child(2) {
-                margin-top: 80px;
-            }
-
-            #head-line {
-                -webkit-transform: scale(0.8);
-                transform: scale(0.8);
-            }
-        }
-
-        #youtube {
-            position: fixed;
-            right: 2vw;
-            bottom: 2vh;
-            font-size: 30px;
-            color: #fff;
-        }
-    </style>
-    <script>
-        window.console = window.console || function (t) { };
-    </script>
-    <script>
-        if (document.location.search.match(/type=embed/gi)) {
-            window.parent.postMessage("resize", "*");
-        }
-    </script>
-</head>
-
-<body translate="no">
+  <body>
     <header>
-        <nav class="navShadow">
-            <div id="brand">
-                <div id="logo"></div>
-                <div id="word-mark"></div>
-            </div>
-            <div id="menu">
-                <div id="menu-toggle">
-                    <div id="menu-icon">
-                        <div class="bar"></div>
-                        <div class="bar"></div>
-                        <div class="bar"></div>
-                    </div>
-                </div>
-                <ul style="top: 100px;">
-                    <li><a href="#section00"></a></li>
-                    <li><a href="#section01"></a></li>
-                    <li><a href="#section02"></a></li>
-                    <li><a href="#section03"></a></li>
-                </ul>
-            </div>
-        </nav>
-        <div id="hero-section">
-            <div id="head-line"></div>
+      <nav>
+        <div id="brand">
+          <div id="logo"></div>
+          <div id="word-mark"></div>s
         </div>
+        <div id="menu">
+          <div id="menu-toggle">
+            <div id="menu-icon">
+              <div class="bar"></div>
+              <div class="bar"></div>
+              <div class="bar"></div>
+            </div>
+          </div>
+          <ul>
+            <li><a href="#section00"></a></li>
+            <li><a href="#section01"></a></li>
+            <li><a href="#section02"></a></li>
+            <li><a href="#section03"></a></li>
+          </ul>
+        </div>
+      </nav>
+      <div id="hero-section">
+        <div id="head-line"></div>
+      </div>
     </header>
     <section id="section00">
-        <div id="heading"></div>
+      <div id="heading"></div>
     </section>
     <section id="section01">
-        <div id="heading"></div>
+      <div id="heading"></div>
     </section>
     <section id="section02">
-        <div id="heading"></div>
+      <div id="heading"></div>
     </section>
     <section id="section03">
-        <div id="heading"></div>
-    </section><a href="https://youtu.be/m1IU7zjl1k4" id="youtube"><i class="fa fa-youtube-play"></i></a>
-    <script
-        src="https://static.codepen.io/assets/common/stopExecutionOnTimeout-157cd5b220a5c80d4ff8e0e70ac069bffd87a61252088146915e8726e5d9f147.js"></script>
+      <div id="heading"></div>
+    </section>
+    <a id="youtube" href="https://youtu.be/m1IU7zjl1k4"
+      ><i class="fa fa-youtube-play"></i
+    ></a>
+    <script src="https://static.codepen.io/assets/common/stopExecutionOnTimeout-157cd5b220a5c80d4ff8e0e70ac069bffd87a61252088146915e8726e5d9f147.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script id="rendered-js">
-        $(() => {
-
-            //On Scroll Functionality
-            $(window).scroll(() => {
-                var windowTop = $(window).scrollTop();
-                windowTop > 100 ? $('nav').addClass('navShadow') : $('nav').removeClass('navShadow');
-                windowTop > 100 ? $('ul').css('top', '100px') : $('ul').css('top', '160px');
-            });
-
-            //Click Logo To Scroll To Top
-            $('#logo').on('click', () => {
-                $('html,body').animate({
-                    scrollTop: 0
-                },
-                    500);
-            });
-
-            //Smooth Scrolling Using Navigation Menu
-            $('a[href*="#"]').on('click', function (e) {
-                $('html,body').animate({
-                    scrollTop: $($(this).attr('href')).offset().top - 100
-                },
-                    500);
-                e.preventDefault();
-            });
-
-            //Toggle Menu
-            $('#menu-toggle').on('click', () => {
-                $('#menu-toggle').toggleClass('closeMenu');
-                $('ul').toggleClass('showMenu');
-
-                $('li').on('click', () => {
-                    $('ul').removeClass('showMenu');
-                    $('#menu-toggle').removeClass('closeMenu');
-                });
-            });
-
-        });
-    //# sourceURL=pen.js
-    </script>
-</body>
-
+    <script src="js/main.js"></script>
+  </body>
 </html>
