--- a/websites/sky-onboarding/index.html
+++ b/websites/sky-onboarding/index.html
@@ -1,7 +1,7 @@
 <html lang="en" class="">
   <head>
     <meta charset="UTF-8" />
-    <title>CodePen Demo</title>
+    <title>Sky Onboarding</title>
     <meta name="robots" content="noindex" />
     <link
       rel="shortcut icon"
@@ -34,8 +34,10 @@
     <header>
       <nav>
         <div id="brand">
-          <div id="logo"></div>
-          <div id="word-mark"></div>s
+          <div id="logo">
+            <img src="img/logo.png" width="100%" alt="">
+          </div>
+          <div id="word-mark"></div>
         </div>
         <div id="menu">
           <div id="menu-toggle">
